<resources>
    <string name="app_name">SmolGo</string>
    <string name="next">Далее</string>
    <string name="quests">Квесты</string>
    <string name="ways">Маршруты</string>
    <string name="achievments">Достижения</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="your_name">Ваше имя</string>
    <string name="singUp">Зарегестрироваться</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="enter">Войти</string>
    <string name="login">Вход</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_email">Введите Email</string>
    <string name="email">Ваш Email</string>
    <string name="loginTo">Войти</string>
    <string name="main">Главная</string>
    <string name="settings">Настройки</string>
    <string name="welcome">Добро пожаловать в Смоленск!</string>
    <string name="quests_">Квестов</string>
    <string name="ways_">Маршрутов</string>
    <string name="achievments_">Достижений</string>
    <string name="start_learning">Начать изучение</string>
    <string name="exit">Выйти</string>
    <string name="hello">Здравствуй,</string>
    <string name="your_achievments">Ваши достижения:</string>
    <string name="achiev_ways">Маршруты</string>
    <string name="complete">Пройдено:</string>
    <string name="wall">Крепостная стена</string>
    <string name="status">Статус:</string>
    <string name="time">Время прохождения:</string>
    <string name="angels">Смоленские ангелы</string>
    <string name="monuments">Памятники</string>
    <string name="last_news">Последние новости:</string>
    <string name="monuments_2">Памятники 2</string>
    <string name="smolenks_churchs">Храмы Смоленска</string>
    <string name="restoraunts">Заведений:</string>
    <string name="food">Гастрономический маршрут</string>
    <string name="food1">Гастрономический</string>
    <string name="questions">Викторины</string>
    <string name="result">Результат:</string>
    <string name="answer">Ответить</string>
    <string name="yandex">Условия использования отдельных сервисов Яндекс Карт</string>
    <string name="vk">Подписаться в ВК</string>
    <string name="title_news">Загрузка</string>
    <string name="text_news">Пока новости загружаются, советуем вам подписаться на наше сообщество в ВК, где вы сможете узнавать все самые важные новости нашего грода самыми первыми!</string>
    <string name="history">История Смоленска</string>
    <string name="statistics">Ваша статистика:</string>
    <string name="gastronom">"Гастрономический"</string>
    <string name="way_church_labels_0">Смоленский Свято-Успенский кафедральный собор</string>
    <string name="way_church_labels_1">Богоявленский собор</string>
    <string name="way_church_labels_2">Одигитриевская надвратная церковь (Днепровские ворота)</string>
    <string name="way_church_labels_3">Церковь Покрова Пресвятой Богородицы (церковь Смоленской Духовной семинарии)</string>
    <string name="way_church_labels_4">Спасо-Преображенский Авраамиев монастырь</string>
    <string name="way_church_labels_5">Вознесенский монастырь</string>
    <string name="way_church_labels_6">Свято-Троицкий монастырь</string>
    <string name="way_church_labels_7">Церковь Георгия Победоносца</string>
    <string name="way_church_where_0">Соборная гора, 5</string>
    <string name="way_church_where_1">Соборный двор, 5</string>
    <string name="way_church_where_2">улица Соболева, 1</string>
    <string name="way_church_where_3">улица Тимирязева, 5</string>
    <string name="way_church_where_4">улица Маршала Жукова, 24</string>
    <string name="way_church_where_5">улица Конёнкова, 9</string>
    <string name="way_church_where_6">улица Большая Советская, 9</string>
    <string name="way_church_where_7">улица Фурманова, 33А</string>
    <string name="way_church_about_0">Первоначально собор был заложен в 1101 году по распоряжению Владимира Мономаха и стал первым памятником монументального зодчества на территории Смоленска. В 1611 году после почти двухлетней обороны Смоленска от войск Речи Посполитой последние его защитники взорвали запасы взрывчатки, хранившейся в погребах вблизи соборного холма, в результате чего рухнула и часть собора, похоронив с собой много женщин и детей. В 1677 году начато сооружение нового здания собора под наблюдением зодчего Алексея Королькова. Наконец, в 1740 году архитектор Готфрид Шедель завершил строительство храма, увенчанного семью куполами синего цвета с золотыми звездами. В соборе до 1941 года хранился первообраз Смоленской иконы Божией Матери, но после оккупации города немецкими войсками образ бесследно пропал.</string>
    <string name="way_church_about_1">В 1708-12 гг. был построен деревянный собор на высоком каменном основании со сводчатым проездом к архиерейскому двору. Это изображено на иконе "Авраамий и Меркурий" (в Успенском соборе). Богоявленский собор был тогда крестообразным: высокий объем с двухярусной главой над ним окружали 4 прируба с главками на высоких шатрах. Так же, как и окружавшие храм двухъярусные галереи, эта группировка объемов связана с традициями белорусского и украинского зодчества. В 1781 г. деревянный собор разобрали и к 1787 г. на этом месте возвели кирпичный. Основание под собором было также изменено. Прежде сквозь него проходил прямой проезд в направлении север-юг. К 1780-м гг.</string>
    <string name="way_church_about_2">Одигитриевская надвратная церковь находится на берегу Днепра, северный фасад выходит на линию крепостной стены вдоль реки, южный обращен к ул. Соболева. Храм выстроен на месте Фроловской (Днепровской) крепостной башни, через которую выходила к реке Большая Благовещенская улица. Башню разобрали в начале 18 века, в 1728 году на ее месте возвели деревянную церковь Рождества Богородицы и поместили сюда икону Смоленской Божией Матери Одигитрии, привезенную в Смоленск в 1602 году Борисом Годуновым. В 1793-1800 гг. церковь перестроили в камне. Существующее здание ворот сооружено в 1811-1812 гг. В 1992 году в стенах Одигитриевского храма разместились начальные классы Православной гимназии.</string>
    <string name="way_church_about_3">Храм стоит на высоком холме над Днепром, почти примыкая к крепостной стене. Занимает важное место в панораме города, открывающейся из его северной части. Церковь построена на средства священника В. Брянцева в 1789 – 1794 гг. из кирпича, заменив более древнюю деревянную. Новый храм был освящен в честь Покрова Пресвятой Богородицы. В приходе почиталась икона Божьей Матери «Живоносный источник», которой был посвящен придел церкви. Покровский храм действовал до 1933 г. После закрытия в нем располагался архив ОблЗАГСа. В годы Великой Отечественной войны церковь значительно пострадала. Долгое время стояла заброшенной. Реставрационные работы выполнены в 1989-1990 годах Епархиальным управлением. Решением Священного Синода 30 ноября 1988 года открыто Смоленское межъепархиальное Духовное училище.</string>
    <string name="way_church_about_4">Монастырь Смоленской епархии Русской православной церкви, один из древнейших монастырей Смоленска. По позднейшему преданию, основан в начале XIII века, епископом Смоленским Игнатием, между 1210 и 1219 годами. Первым настоятелем стал Авраамий Смоленский. При взятии Смоленска поляками в 1611 году он был разорён и обращен в католический доминиканский училищный монастырь («кляштор»), а в 1634 году — упразднён. В 2001 году началось возрождение монастыря. Наместником назначен игумен Аркадий (Недосеков). В 2013 году было завершено возвращение монастыря РПЦ; были переданы настоятельские и монашеские кельи, а также две башни Смоленской крепостной стены — Авраамиева и Заалтарная, и прясла между ними.</string>
    <string name="way_church_about_5">Женский монастырь в Смоленске. Монастырь основан в 1630-е годы иезуитами. В феврале 1665 года превращён в женский православный монастырь. Сюда были переведены монахини Оршанского Успенского монастыря с игуменьей Ираидой Куракиной. В 1764—1765 годах по инициативе игуменьи Олимпиады Рыдванской к храму Вознесения пристроена придельная церковь Екатерины. После революции монастырь был упразднён. В настоящее время монастырь возрождён.</string>
    <string name="way_church_about_6">Женский православный монастырь в Смоленске. До 1703 года в монастыре жили смоленские архиереи. Первоначально постройки были деревянными. Каменный Троицкий собор воздвигнут между 1672—1675 годами по инициативе смоленского митрополита Варсонофия Еропкина на средства из казны, предположительно, московским зодчим Иваном Калининым. В те же годы к северу от собора построен деревянный дом для настоятеля (разрушен в 1943 году).</string>
    <string name="way_church_about_7">Каменный храм в честь великомученика Георгия Победоносца с приделами великомученика Димитрия Солунского и Владимирской иконы Божией Матери построен в 1782 году усердием священника Гетрашевича. Георгиевский храм в сентябре 1999 года передан епархии. До этого в нем размещалась дирекция Смоленского специального научно-реставрационного производственного управления (ССНРПУ) Ассоциации «Росреставрация». В настоящее время в здании храма располагается общежитие Духовного училища. 13 июня 2002 года митрополит Смоленский и Калининградский Кирилл, ныне Святейший Патриарх Московский и всея Руси, совершил освящение домового храма во имя святого великомученика Георгия Победоносца.</string>
    <string name="way_food_label_0">РУССКИЙ ДВОР</string>
    <string name="way_food_label_1">Кофебук</string>
    <string name="way_food_label_2">Лопатинский Сад</string>
    <string name="way_food_where_0">улица Октябрьской Революции, 1Б</string>
    <string name="way_food_where_1">улица Октябрьской Революции, 6</string>
    <string name="way_food_where_2">улица Дзержинского, 18Б</string>
    <string name="way_food_about_0">Кафе «Русский двор» в Смоленске — уголок традиционного гостеприимства, где бережно сохраняют и развивают смоленскую кухню. Здесь подают по-настоящему домашние блюда: румяные блины, сытные пельмени и наваристые супы. Уютный интерьер в старорусском стиле создает особую атмосферу, идеальную для семейных обедов и встреч с друзьями. Доступные цены и качественный сервис делают это место одним из самых популярных в городе.</string>
    <string name="way_food_about_1">Кофейня «Кофебук» — это уютное заведение в историческом центре Смоленска, где можно насладиться ароматным кофе и вкусными десертами. Интерьер кофейни выполнен в спокойных тонах с приглушенным светом и ненавязчивой музыкой, что создает приятную атмосферу для отдыха.</string>
    <string name="way_food_about_2">Кафе «Лопатинский Сад» — это идеальное место в самом сердце Смоленска, где вы сможете провести время в теплой, уютной атмосфере. Заведение предлагает гостям насладиться изысканными блюдами, качественным обслуживанием и приятной живой музыкой, создающей незабываемое настроение для отдыха с друзьями, семьей или романтического вечера.</string>
    <string name="way_wall_label_0">Башня Копытенские ворота</string>
    <string name="way_wall_label_1">Башня Бублейка</string>
    <string name="way_wall_label_2">Башня Громовая</string>
    <string name="way_wall_label_3">Башня Донец</string>
    <string name="way_wall_label_4">Башня Моховая (Маховая)</string>
    <string name="way_wall_label_5">Башня Никольские ворота</string>
    <string name="way_wall_label_6">Башня Зимбулка</string>
    <string name="way_wall_label_7">Башня Долгочевская (Шембелева)</string>
    <string name="way_wall_label_8">Башня Воронина</string>
    <string name="way_wall_label_9">Башня Заалтарная</string>
    <string name="way_wall_label_10">Башня Авраамиевские ворота</string>
    <string name="way_wall_label_11">Башня Орёл (Городецкая)</string>
    <string name="way_wall_label_12">Башня Позднякова (Роговка)</string>
    <string name="way_wall_label_13">Башня Веселуха (Лучинская)</string>
    <string name="way_wall_label_14">Башня Костыревская (Красная)</string>
</resources>