<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_back"
            android:gravity="center"
            android:onClick="backActivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/helloName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="50dp"

                android:fontFamily="@font/roboto_medium"
                android:text="@string/hello"
                android:textColor="?attr/colorOnSurface"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="50dp"

                android:fontFamily="@font/roboto_medium"
                android:text="Версия приложения:    1.1.0"
                android:textColor="?attr/colorOnSurface"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"

                android:fontFamily="@font/roboto_medium"
                android:text="@string/yandex"
                android:textColor="@color/link"
                android:textSize="22sp"
                android:onClick="yandexLink"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="280dp"

                android:fontFamily="@font/roboto_medium"
                android:text="@string/vk"
                android:drawableLeft="@drawable/img_vk_logo"
                android:gravity="center_vertical"
                android:textColor="@color/link"
                android:textSize="22sp"
                android:onClick="vkLink"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/down"
                android:fontFamily="@font/roboto_medium"
                android:onClick="logout"

                android:text="@string/exit"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="24sp"
                app:cornerRadius="16dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>