<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="130dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                android:background="@drawable/card"

                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:onClick="monument">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="left"
                    android:text="@string/monuments"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="24dp"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="32sp"
                    android:drawablePadding="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="left"
                        android:text="@string/status"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="24dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/status_monument"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="right"
                        android:text=""
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="24dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="24sp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="left"
                        android:text="@string/time"
                        android:layout_marginStart="24dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="right"
                        android:text="2 ч."
                        android:layout_marginEnd="24dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="24sp"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="?attr/colorOnBackground"
        app:itemActiveIndicatorStyle="?attr/colorOnBackground"
        app:itemIconTint="@color/bottom_navigation_selector"
        app:itemTextColor="@color/bottom_navigation_selector"
        app:labelVisibilityMode="labeled"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>